src/objects/Google_AdWord__c.object
<CustomObject>
    <description>for use by the web/marketing team....probably redundant with the AdGroups package, but I haven&apos;t looked into that.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Google AdWords</relationshipLabel>
        <relationshipName>Google_AdWords</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ad_Content__c</fullName>
        <label>Ad Content</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ad_Group__c</fullName>
        <description>New field Scott requested</description>
        <label>Ad Group</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keyword__c</fullName>
        <description>search words</description>
        <label>Keyword</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Landing_Page__c</fullName>
        <label>Landing Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Google AdWords</relationshipLabel>
        <relationshipName>Google_AdWords</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Search_Time__c</fullName>
        <description>time the search was performed</description>
        <label>Search Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Google AdWord</label>
    <nameField>
        <displayFormat>GA-{0000}</displayFormat>
        <label>Google AdWord Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Google AdWords</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>